--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>tic tac toe</title>
     <script src="./src/index.js"></script>
+    <link rel="stylesheet" type="text/css" href="./src/styles.css" />
   </head>
 
   <body>
