--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
   <body>
     <h1>tictactoe</h1>
     <h2 id="current">current player:</h2>
+    <br />
+    <h2 id="time">time left: 10s</h2>
+    <br />
+
+    <div id="progress">
+      <div id="timer"></div>
+    </div>
+    <br />
+
     <table id="board">
       <tr>
         <td></td>
